2011-12-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #32477: Reference to tslib_pibase constructor in tx_srfreecap_pi2

2011-02-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13072: Captcha not showing up when using MP from other domain (Thanks to Ernesto Baschny)
	* Updated version to 1.4.1

2011-02-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12921: Audio captcha should be accessible by TAB key (Thanks to Elliot Sawyer)
	* Require PHP 5.1
	* Updated manual
	* Fixed bug #12938: "www.mydomain.org" is not RFC 2606 compilant
	* Partially fixed bug #5628: Political (In-)Correctness of the german word list
	* Updated version to 1.4.0

2011-02-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #12714: Add TS constants to control darkness of the captcha text. Thanks to Julia Pardanaud.
	* Added feature #12716: New default values of TS constants to increase CAPTCHA readability. Thanks to Julia Pardanaud.

2010-12-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10223: BE module not shown anymore with TYPO3 4.4
	* Fixed bug #8528: Typo in Dutch localization of label in pi2/locallang.xml
	* Fixed bug #7987: maxWordLength problem

2010-04-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Require TYPO3 4.3
	* Manual updated.
	* Updated ext_emconf from TER version 1.2.3

2010-04-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7259: Use of deprecated function t3lib_div::makeInstanceClassName()

2009-10-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug: Mishandling of session data. Thanks to Wolo Wolski.
	* Updated ext_emconf from TER version 1.2.2
	* Updated manual.

2009-08-31  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature: new TS constant accessibleOutputImage and textual version.
	* Manual updated.
	* Updated ext_emconf from TER version 1.2.0

2009-08-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #3056: Audio Captcha is not rendered in IE8